# goetia

./: .gitignore  CLAUDE.md  RESET.md  index.html  package-lock.json  package.json  test-grimoire.txt
.claude/: settings.json
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: client.rs  mod.rs  streaming.rs
src-tauri/src/auth/: keychain.rs  mod.rs  touchid.rs
src-tauri/src/commands/: auth_commands.rs  chronicle_commands.rs  config_commands.rs  demon_commands.rs  genesis_commands.rs  grimoire_commands.rs  mod.rs  session_commands.rs  sync_commands.rs  temple_commands.rs
src-tauri/src/crypto/: cipher.rs  grimoire_hash.rs  mod.rs  wipe.rs
src-tauri/src/demons/: banishment.rs  context.rs  evocation.rs  genesis.rs  manifest_generator.rs  mod.rs
src-tauri/src/storage/: chronicles.rs  demons.rs  genesis_registry.rs  grimoire.rs  migration.rs  mod.rs  paths.rs  temples.rs
src-tauri/src/sync/: force_sync.rs  heartbeat.rs  icloud.rs  lock.rs  mod.rs
src/audio/: Ambient.ts  AudioEngine.ts  BackgroundNoise.ts  RitualDrone.ts  VoiceSynth.ts
src/hooks/: useGenesis.ts  useSession.ts  useStreaming.ts  useTauriCommand.ts
src/places/Circle/: index.tsx
src/ritual/: DemonForm.tsx  GenesisVoid.tsx  RitualConfig.ts  Scene.tsx  types.ts
src/state/: appState.ts  genesisState.ts  sessionState.ts
src/ui/: AuthRecovery.tsx  DebugPanel.tsx  GlowText.tsx  ModelSelector.tsx  NavigationBar.tsx  SetupFlow.tsx  SyncIndicator.tsx  TempleGate.tsx  Terminal.tsx
(+68 files in other folders)
