[package]
name = "goetia"
version = "0.1.0"
description = "GOETIA — Digital Grimoire"
authors = ["Alessio Bernesco Lavore"]
edition = "2021"

[lib]
name = "goetia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
sha2 = "0.10"
hkdf = "0.12"
reqwest = { version = "0.12", features = ["stream", "json"] }
security-framework = "3"
security-framework-sys = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
libc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString"] }
block2 = "0.6"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

